# aoc_rs

./: .gitignore  Cargo.toml  README.md
2021/day2/src/: main.rs
2023/: README.md  buggy_day07_from_reddit.jpg:Zone.Identifier
2023/day01/: Cargo.toml
2023/day01/src/: main.rs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs
2023/day03/: Cargo.toml  test_bug.txt
2023/day03/src/: main.rs
2023/day04/: Cargo.toml
2023/day04/src/: main.rs
2023/day05/: instructions.txt
2023/day05/src/: main.rs
2023/day06/: instructions.txt
2023/day06/src/: main.rs
2023/day07/: example_not_sorted.txt  instructions.txt
2023/day07/src/: main.rs
2023/day08/src/: main.rs
2023/day09/: instructions.txt
2023/day09/src/: main.rs
2023/day10/: instructions.txt
2023/day11/: instructions.txt
2023/day12/: instructions.txt
2023/day15/: Cargo.toml
2023/day15/src/: main.rs
2024/: README.md
2024/day01/src/: main.rs
2024/day02/: Cargo.toml
2024/day02/src/: main.rs
2024/day03/: Cargo.toml
2024/day03/src/: main.rs
2024/day04/src/: main.rs
2024/day06/src/: main.rs
2024/day07/src/: main.rs
2024/day08/: Cargo.toml
2024/day08/src/: main.rs
2024/day11/: Cargo.toml
2024/day11/src/: main.rs
2025/: README.md
2025/day01/src/: main.rs
2025/day02/src/: main.rs
2025/day03/src/: main.rs
2025/day04/src/: main.rs
2025/day05/src/: main.rs
2025/day06/src/: main.rs
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
private/day1/src/: main.rs
